--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,8 @@ environment:
     Platform: x64
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     compiler: cygwin
+    #
+    githubcache: true
 
 #   - r: 4.1.0 # stable from source tarball
 #     PlatformToolset: v142
@@ -34,6 +36,8 @@ environment:
 #     Platform: x86
 #     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
 #     compiler: cygwin
+#     #
+#     githubcache: true
 
 for:
 -
