rename dir to find VERSION

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -170,9 +170,10 @@ for:
   #
   # https://superuser.com/questions/80019/how-can-i-unzip-a-tar-gz-in-one-step-using-7-zip
   #
-  - if not %r%=="none" 7z x "R-version.tar.gz" -so | 7z x -aoa -si -ttar -o"c:\projects\r
-  - dir "c:\projects\r"
-    
+  - if not %r%=="none" 7z x "R-version.tar.gz" -so | 7z x -aoa -si -ttar -o"c:\projects"
+  - move "c:\projects\R-%r%" "c:\projects\r"
+  - dir  "c:\projects\r"
+
   # https://cygwin.com/faq/faq.html#faq.setup.cli
 
   # environment of cygwin
