--- a/appveyor.yml
+++ b/appveyor.yml
@@ -174,6 +174,7 @@ for:
   - if exist "%rsource%" rmdir "c:\projects\r" /S /Q
   - if not %r%=="none" 7z x "R-version.tar.gz" -so | 7z x -aoa -si -ttar -o"c:\projects"
   - dir   "c:\projects"
+  # could have done mklink /J fake real
   - move  "c:\projects\R-%r%" "c:\projects\r"
 
   # https://cygwin.com/faq/faq.html#faq.setup.cli
