--- a/appveyor.yml
+++ b/appveyor.yml
@@ -203,9 +203,21 @@ for:
   # https://cygwin.com/cgi-bin2/package-grep.cgi?grep=R-&arch=x86
   ###
   ### NEED A CYGWIN COMPILED "R", so "rversion" (if any) is effectively ignored
-  - if     "%r%"=="none" setup.exe -qnNdO -R "%CYG_ROOT%" -s "%CYG_MIRROR%" -l "%CYG_CACHE%" -P R -P R-debuginfo
+  #
+  # R ( bash cygwin libbz2_1 libcairo2 libcurl4 libgcc1 libglib2.0_0 libgomp1 libiconv2 libicu69 libintl8 libjpeg8 liblapack0 liblzma5 libopenblas libpango1.0_0 libpcre2_8_0 libpng16 libreadline7 libtiff6 libtirpc3 libX11_6 libXmu6 libXt6 pkg-config tcl tcl-tk zlib0 R_autorebase)
+  #
+  # R-debuginfo (cygwin-debuginfo)
+  # libRMath (cygwin)
+  # libRMath-devel (libRmath pkg-config)
+  #
+  - if     "%r%"=="none" setup.exe -qnNdO -R "%CYG_ROOT%" -s "%CYG_MIRROR%" -l "%CYG_CACHE%" -P R -P R-debuginfo -P libRMath-devel
   ### BUILD MYSELF
-  - if not "%r%"=="none" setup.exe -qnNdO -R "%CYG_ROOT%" -s "%CYG_MIRROR%" -l "%CYG_CACHE%" -P gcc-core -P gcc-fortran
+  # better C development
+  # gcc-core gcc-g++ (from gcc-c++) gdb make
+  # How to install Cygwin C/C++ compiler and configure code blocks IDE
+  # 2017
+  # https://youtu.be/24_xtaAePDY?t=48
+  - if not "%r%"=="none" setup.exe -qnNdO -R "%CYG_ROOT%" -s "%CYG_MIRROR%" -l "%CYG_CACHE%" -P gcc-core -P gcc-g++ -P gcc-fortran -P gdb -P make
   # configure looks for the runtime client command line executable
   - if not "%r%"=="none" setup.exe -qnNdO -R "%CYG_ROOT%" -s "%CYG_MIRROR%" -l "%CYG_CACHE%" -P unzip
   #
@@ -295,5 +307,9 @@ deploy:
     on:
       APPVEYOR_REPO_TAG: true
 
+on_failure:
+  - appveyor PushArtifact %rsource%\*.log
+
+# includes on_success on_failure
 on_finish:
   - appveyor PushArtifact %rsource%\*.log
